First attempt at making image smaller using a JRE built with jlink